tests/res/recursion/stack_overflow.say
// Unbounded recursion raises a runtime error instead of corrupting memory.
fn recurse(n) {
    return recurse(n + 1); // error: Stack overflow
}

recurse(0);
